# tool_man

./: .env  .env.dev  .env.prod  .gitignore  Dockerfile  README.md  bot.py  doc.md  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy_tool_man.yml  github-actions-demo.yml
configs/: path_config.py
data/petpet/: meme_list.yml
scripts/: news_60s.py
src/plugins/Apex_Tool/: __init__.py  config.py
src/plugins/Apex_Tool/Assets/: QQ_EA_ID.json
src/plugins/common/: __init__.py  data_source.py
src/plugins/paper/: __init__.py  data_source.py
utils/: http_utils.py  message_builder.py
