[tool.poetry]
name = "tool_man"
version = "0.1.0"
description = "tool_man"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.3"
nonebot2 = "^2.0.0-beta.1"
aiofiles = "22.1.0"
apscheduler = "3.9.1"
anyio = "3.6.2"
nonebot-adapter-onebot = "2.1.4"
nonebot-plugin-apscheduler = "0.2.0"
nonebot-plugin-imageutils = "0.1.13.2"
nonebot-plugin-petpet = "^0.3.17.1"
opencv-python = "4.6.0.66"
opencv-python-headless = "4.6.0.66"
playwright = "1.27.1"
pyyaml = "6.0"
rich = "12.6.0"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.19.1"
text-unidecode = "1.3"
typing-extensions = "4.4.0"
tzdata = "2022.5"
tzlocal = "4.2"
watchfiles = "0.18.0"
wcwidth = "0.2.5"
yarl = "1.8.1"
httpx = "0.23.0"
idna = "3.4"
imageio = "2.22.3"
jinja2 = "3.1.2"
jinja2-time = "0.2.0"
kiwisolver = "1.4.4"
logger = "1.4"
loguru = "0.6.0"
lxml = "4.9.1"
markupsafe = "2.1.1"
click = "8.1.3"
colorama = "0.4.5"
chardet = "5.0.0"
nb-cli = "0.6.7"
retrying = "1.3.3"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_apscheduler", "nonebot_plugin_petpet"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

